fix: [CDNG-8023]: scrollbar issue (#3088)

--- a/src/modules/75-cd/components/PipelineStudio/DeployAdvancedSpecifications/DeployAdvancedSpecifications.module.scss
+++ b/src/modules/75-cd/components/PipelineStudio/DeployAdvancedSpecifications/DeployAdvancedSpecifications.module.scss
@@ -72,7 +72,6 @@
 .content-section {
   padding: 48px;
   height: 100%;
-  overflow-y: scroll;
 }
 
 .stage-create {
