--- a/src/modules/75-cd/components/PipelineStudio/DeployInfraSpecifications/DeployInfraSpecifications.module.scss
+++ b/src/modules/75-cd/components/PipelineStudio/DeployInfraSpecifications/DeployInfraSpecifications.module.scss
@@ -142,7 +142,6 @@
 .content-section {
   padding: 48px;
   height: 100%;
-  overflow-y: scroll;
 }
 .tabHeading {
   font-size: var(--font-size-medium);
