--- a/src/modules/75-cd/components/PipelineStudio/DeployStage/EditStageView/EditStageView.module.scss
+++ b/src/modules/75-cd/components/PipelineStudio/DeployStage/EditStageView/EditStageView.module.scss
@@ -248,7 +248,6 @@
 .content-section {
   padding: 48px;
   height: 100%;
-  overflow-y: scroll;
 }
 .tabHeading {
   font-size: var(--font-size-medium);
